--- a/index.html
+++ b/index.html
@@ -5,30 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles/style.css">
   
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
+<body class="font-inter">
+  <main>
+    <img src="/assets/images/avatar-jessica.jpeg" alt="Imagen do usuário">
+    <h1 class="inter-700">
+      Jessica Randall
+    </h1>
+    <p class="strong">
+      London, United Kingdom
+    </p>
+    <p>
+      "Front-end developer and avid reader."
+    </p>
+    <a class="social-link" href="#">
+      GitHub
+    </a>
+    <a class="social-link" href="#">
+      Frontend Mentor
+    </a>
+    <a class="social-link" href="#">
+      LinkedIn
+    </a>
+    <a class="social-link" href="#">
+      Twitter
+    </a>
+    <a class="social-link" href="#">
+      Instagram
+    </a>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Arnildo Soares</a>.
   </div>
 </body>
 </html>
